--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "just",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "files": [
     "dist/**/*"
   ],
@@ -10,8 +9,8 @@
     "just": "./dist/just.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
+    "build": "node ./scripts/build.js",
+    "watch": "node ./scripts/watch.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,13 +25,16 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
-    "@swc-node/register": "^1.4.2",
-    "@swc/core": "^1.2.130",
-    "@swc/helpers": "^0.3.2",
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "dotenv": "^15.0.0",
+    "esbuild": "^0.14.16",
+    "glob": "^7.2.0",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/node": "^17.0.10",
-    "typescript": "^4.5.4"
+    "@types/nodemon": "^1.19.1"
   }
 }
