--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
+    "@anatine/esbuild-decorators": "^0.2.18",
+    "chokidar": "^3.5.3",
     "commander": "^8.3.0",
     "dotenv": "^15.0.0",
     "esbuild": "^0.14.16",
+    "esbuild-runner": "^2.2.1",
     "glob": "^7.2.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
