--- a/package.json
+++ b/package.json
@@ -25,17 +25,21 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
-    "@anatine/esbuild-decorators": "^0.2.18",
     "chokidar": "^3.5.3",
-    "commander": "^8.3.0",
-    "dotenv": "^15.0.0",
+    "colors": "^1.4.0",
+    "commander": "^9.1.0",
+    "dir-glob": "^3.0.1",
+    "dotenv": "^15.0.1",
     "esbuild": "^0.14.16",
-    "esbuild-runner": "^2.2.1",
     "glob": "^7.2.0",
-    "nodemon": "^2.0.15",
+    "strip-json-comments": "^3.1.1",
+    "tsc-alias": "^1.6.5",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/dir-glob": "^2.0.1",
+    "@types/eslint": "^8.4.1",
     "@types/glob": "^7.2.0",
     "@types/node": "^17.0.10",
     "@types/nodemon": "^1.19.1"
