--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sonnyt/just",
   "version": "0.0.2-0",
-  "description": "",
+  "description": "Zero config TypeScript build and development toolkit.",
   "files": [
     "dist/**/*",
     "register.js"
@@ -18,8 +18,17 @@
     "type": "git",
     "url": "git+https://github.com/sonnyt/just.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "typescript",
+    "watch",
+    "build",
+    "development"
+  ],
+  "author": {
+    "name": "Sonny T.",
+    "email": "mail@sonnyt.com",
+    "url": "https://sonnyt.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sonnyt/just/issues"
