--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "just": "./dist/just.js"
   },
   "scripts": {
-    "build": "node ./scripts/build.js",
-    "watch": "node ./scripts/watch.js",
+    "build": "npx swc ./src -d dist",
+    "watch": "npx swc ./src -d dist -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -35,15 +35,16 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.163",
+    "@swc/helpers": "^0.3.8",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
     "commander": "^9.1.0",
     "dir-glob": "^3.0.1",
     "dotenv": "^15.0.1",
-    "esbuild": "^0.14.30",
     "glob": "^7.2.0",
     "strip-json-comments": "^3.1.1",
-    "tsc-alias": "^1.6.5",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.5.5"
   },
@@ -51,7 +52,6 @@
     "@types/dir-glob": "^2.0.1",
     "@types/eslint": "^8.4.1",
     "@types/glob": "^7.2.0",
-    "@types/node": "^17.0.10",
-    "@types/nodemon": "^1.19.1"
+    "@types/node": "^17.0.10"
   }
 }
