--- a/just.tsconfig.json
+++ b/just.tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "target": "ESNext",
+    "target": "ES2021",
     "moduleResolution": "Node",
     "inlineSourceMap": true,
     "strict": true,
