--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.10",
     "jest": "^27.5.1",
-    "ts-jest": "^27.1.4"
+    "ts-jest": "^27.1.4",
+    "tslib": "^2.3.1"
   }
 }
