--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "strip-json-comments": "^3.1.1",
     "tsc-alias": "^1.6.6",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "which": "^2.0.2"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
@@ -54,6 +55,7 @@
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.10",
+    "@types/which": "^2.0.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "tslib": "^2.3.1"
