Remove trailing comma from tsconfig
- A trailing comma in the tsconfig was causing an error when using the
  register script on the just project itself.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": "src",
     "skipLibCheck": true,
     "importHelpers": true,
-    "strict": true,
+    "strict": true
   },
   "include": [
     "src"
