--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sonnyt/just",
-  "version": "0.0.2-9",
+  "version": "0.0.2",
   "description": "Zero config TypeScript build and development toolkit.",
   "files": [
     "dist/**/*",
