--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
-    "@swc/core": "^1.2.207",
+    "@swc/core": "1.2.205",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
     "commander": "^9.1.0",
