--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
+    "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.100",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
@@ -43,9 +44,7 @@
     "dir-glob": "^3.0.1",
     "dotenv": "^16.3.1",
     "get-port": "^5.1.1",
-    "get-tsconfig": "^4.7.2",
     "glob": "^10.3.10",
-    "tsconfig-to-swcconfig": "^2.7.0",
     "typescript": "^5.3.3",
     "which": "^4.0.0"
   },
