--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.4",
   "description": "Zero config TypeScript build and development toolkit.",
   "files": [
+    "README.md",
+    "LICENSE",
     "dist/**/*",
     "register.js",
     "just.tsconfig.json"
@@ -36,8 +38,7 @@
   },
   "homepage": "https://github.com/sonnyt/just#readme",
   "dependencies": {
-    "@swc-node/register": "^1.6.8",
-    "@swc/core": "^1.3.100",
+    "@swc/core": "1.2.205",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
     "commander": "^11.1.0",
