--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.4",
   "description": "Zero config TypeScript build and development toolkit.",
   "files": [
+    "README.md",
+    "LICENSE",
     "dist/**/*",
-    "register.js"
+    "register.js",
+    "just.tsconfig.json"
   ],
   "bin": {
     "just": "./dist/just.js"
@@ -38,26 +41,24 @@
     "@swc/core": "1.2.205",
     "chokidar": "^3.5.3",
     "colors": "^1.4.0",
-    "commander": "^9.1.0",
+    "commander": "^11.1.0",
     "dir-glob": "^3.0.1",
-    "dotenv": "^15.0.1",
-    "glob": "^7.2.0",
-    "strip-json-comments": "^3.1.1",
-    "tsc-alias": "^1.6.6",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.5.5",
-    "which": "^2.0.2"
+    "dotenv": "^16.3.1",
+    "get-port": "^5.1.1",
+    "glob": "^10.3.10",
+    "typescript": "^5.3.3",
+    "which": "^4.0.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@types/dir-glob": "^2.0.1",
-    "@types/eslint": "^8.4.1",
-    "@types/glob": "^7.2.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.10",
-    "@types/which": "^2.0.1",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "tslib": "^2.3.1"
+    "@swc/cli": "^0.1.63",
+    "@types/dir-glob": "^2.0.3",
+    "@types/eslint": "^8.44.9",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.4",
+    "@types/which": "^3.0.3",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "tslib": "^2.6.2"
   }
 }
